# smartin3d

./: .gitignore  Actor.cpp  Actor.h  CMakeLists.txt  Camera.cpp  Camera.h  FileUtils.h  Log.cpp  Log.h  README.md  Shader.cpp  Shader.h  Time.cpp  Time.h  Transform.cpp  Transform.h  Window.cpp  Window.h  main.cpp  precompiled.h
assets/shaders/: default.fshader
cmake/: FindGLM.cmake
include/: Actor.h  Camera.h  External.h  Input.h  Material.h  Mesh.h  Model3D.h  OpenGLContext.h  Render.h  STime.h  Shader.h  Texture.h  TimeUtils.h  Transform.h  Window.h
include/actors/: Camera.h
include/base/: Actor.h  App.h  Camera.h  Job.h  Transform.h
include/graphics/: Appearance.h  Material.h  Mesh.h  Model3D.h  Render.h  Settings.h  Shader.h  Skybox.h  Texture.h  Window.h
include/graphics/lighting/: DirectionalLight.h  Light.h  ShadowMap.h
include/utils/: AssetLoader.h  AssetPool.h  AssetUtils.h  Exceptions.h  External.h  FileUtils.h  Input.h  Log.h  ModelLoader.h  OpenGLContext.h  TimeUtils.h
samples/: CMakeLists.txt
samples/flying_camera/: CMakeLists.txt
samples/flying_camera/assets/shaders/: lit.fshader  lit.vshader  omni_shadow.fshader  omni_shadow.gshader  skybox.fshader
samples/flying_camera/src/: CameraMovementJob.h  XwingDestroyJob.h  main.cpp
shaders/: default.fshader  default.vshader
src/: Actor.cpp  Camera.cpp  Input.cpp  Material.cpp  Mesh.cpp  Model3D.cpp  STime.cpp  Shader.cpp  Texture.cpp  TimeUtils.cpp  Transform.cpp  Window.cpp  main.cpp
src/actors/: Camera.cpp
src/base/: Actor.cpp  App.cpp  Camera.cpp  Transform.cpp
src/graphics/: Appearance.cpp  Material.cpp  Mesh.cpp  Model3D.cpp  Render.cpp  Shader.cpp  Skybox.cpp  Texture.cpp  Window.cpp
src/graphics/lighting/: DirectionalLight.cpp  Light.cpp  ShadowMap.cpp
src/utils/: AssetLoader.cpp  AssetUtils.cpp  Exceptions.cpp  Input.cpp  Log.cpp  ModelLoader.cpp  TimeUtils.cpp
tests/: CMakeLists.txt  asset_pool_tests.cpp  main.cpp  test_hints.h  transform_tests.cpp
